--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,25 @@
       <artifactId>jakarta.xml.bind-api</artifactId>
     </dependency>
 
+<!--     //Test dep for serenety  -->
+
+    <dependency>
+        <groupId>net.serenity-bdd</groupId>
+        <artifactId>serenity-core</artifactId>
+        <version>3.9.0</version> <!-- Use the latest version available -->
+    </dependency>
+    <dependency>
+        <groupId>net.serenity-bdd</groupId>
+        <artifactId>serenity-junit</artifactId>
+        <version>3.9.0</version>
+    </dependency>
+    <dependency>
+        <groupId>net.serenity-bdd</groupId>
+        <artifactId>serenity-cucumber6</artifactId> <!-- or serenity-cucumber5 if using Cucumber 5 -->
+        <version>3.9.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -272,6 +291,20 @@
         <?m2e ignore?>
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
+      </plugin>
+
+<!--       Test plugings for serenity  -->
+      <plugin>
+          <groupId>net.serenity-bdd.maven.plugins</groupId>
+          <artifactId>serenity-maven-plugin</artifactId>
+          <version>3.9.0</version> <!-- Use the same version as above -->
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>aggregate</goal>
+                  </goals>
+              </execution>
+          </executions>
       </plugin>
 
     </plugins>
